--- a/package.json
+++ b/package.json
@@ -10,11 +10,6 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "axios": "^0.26.0",
-    "body-parser": "^1.19.2",
-    "polka": "^0.5.2",
-    "showdown": "^2.0.0",
-    "showdown-highlight": "^2.1.8",
-    "showdown-katex": "^0.8.0"
+    "axios": "^0.26.0"
   }
 }
