--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "forem-client": "^1.0.1"
   }
 }
