--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "toto",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "n4n5",
-  "license": "MIT",
-  "type": "module",
-  "dependencies": {
-    "axios": "^0.26.0",
-    "forem-client": "^1.0.1"
-  }
+    "name": "toto",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "bin": "./bin/forem-cli.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "realease": "cp index.js bin/"
+    },
+    "author": "n4n5",
+    "license": "MIT",
+    "type": "module",
+    "dependencies": {
+        "axios": "^0.26.0",
+        "forem-client": "^1.0.1"
+    }
 }
